refactor(LottoTest): Array.asList를 List.of로 수정
불변 리스트를 생성하도록 수정하였다.